--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
+<link rel="icon" href="favicon.ico">
 
-
-  <title>Bee Creative</title>
+  <title>Bee Creative | Making Web Design Easy</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand" href=""><i class="fab fa-forumbee"></i> Bee Creative</a>
+      <a class="navbar-brand" href=""><img src="favicon.ico" alt="bee-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,7 +40,7 @@
     </nav>
     <div class="row">
       <div class="col-lg-12">
-<i class="fab fa-forumbee fa-7x"></i>
+<img class="beelogo" src="http://pngimg.com/uploads/bee/bee_PNG74680.png" alt="bee-logo">
         <h1>Bee Creative</h1>
         <p class="sub-title">Making Web Design Easy</p>
       </div>
@@ -74,10 +74,14 @@
   </section>
 
   <section id="principles">
-
+<div class="">
+  <h2></h2>
+</div>
   </section>
 
+<footer>
 
+</footer>
 
 
 </body>
