--- a/index.html
+++ b/index.html
@@ -8,80 +8,98 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
-<link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   <title>Bee Creative | Making Web Design Easy</title>
 </head>
 
 <body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <header class="heading">
+    <div class="container-fluid">
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand" href=""><img src="favicon.ico" alt="bee-logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="">Key Technologies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Design Principles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="row">
-      <div class="col-lg-12">
-<img class="beelogo" src="http://pngimg.com/uploads/bee/bee_PNG74680.png" alt="bee-logo">
-        <h1>Bee Creative</h1>
-        <p class="sub-title">Making Web Design Easy</p>
+      <nav class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Key Technologies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Design Principles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="row">
+        <div class="col-lg-12">
+          <img class="beelogo" src="http://pngimg.com/uploads/bee/bee_PNG74680.png" alt="bee-logo">
+          <h1>Bee Creative</h1>
+          <p class="sub-title">Making Web Design Easy</p>
+        </div>
       </div>
     </div>
-
   </header>
   <section id="tech">
-    <h2>Understand the Key Technologies Used in Web Design</h2>
-    <div class="row">
+    <div class="container-fluid">
+
+
+      <h2>Understand the Key Technologies Used in Web Design</h2>
+      <div class="row">
 
 
 
-      <div class="tech-box col-lg-4">
-        <i class="icon fab fa-html5 fa-7x"></i>
-        <h3>HTML</h3>
-        <p>Structure</p>
-      </div>
+        <div class="tech-box col-lg-4">
+          <i class="icon fab fa-html5 fa-7x"></i>
+          <h3>HTML</h3>
+          <p>Structure</p>
+        </div>
 
-      <div class="tech-box col-lg-4">
-      <i class="icon fab fa-css3-alt fa-7x"></i>
-        <h3>CSS</h3>
-        <p>Style</p>
-      </div>
+        <div class="tech-box col-lg-4">
+          <i class="icon fab fa-css3-alt fa-7x"></i>
+          <h3>CSS</h3>
+          <p>Style</p>
+        </div>
 
-      <div class="tech-box col-lg-4">
-      <i class="icon fab fa-js-square fa-7x"></i>
-        <h3>JavaScript</h3>
-        <p>Behaviour</p>
+        <div class="tech-box col-lg-4">
+          <i class="icon fab fa-js-square fa-7x"></i>
+          <h3>JavaScript</h3>
+          <p>Behaviour</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="principles">
-<div class="">
-  <h2></h2>
-</div>
+    <div class="">
+      <h2></h2>
+    </div>
   </section>
 
-<footer>
+  <footer id="contact">
+    <div class="container-fluid">
 
-</footer>
+
+
+      <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
+      <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
+      <a href="http://instagram.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
+      <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" target="_blank"></i></a>
+      <p class="copyright">© Copyright 2019 BeeCreative</p>
+    </div>
+  </footer>
 
 
 </body>
