--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
   <link rel="icon" href="favicon.ico">
-
+<meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design">
+<meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
   <title>Bee Creative | Making Web Design Easy</title>
 </head>
 
@@ -20,9 +21,6 @@
   <header class="heading">
     <div class="container-fluid">
 
-
-
-
       <nav class="navbar navbar-expand-lg navbar-light ">
         <a class="navbar-brand" href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,10 +30,13 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Key Technologies</a>
+              <a class="nav-link" href="keytech.html">Key Technologies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Design Principles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Use of Web Technologies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -52,11 +53,12 @@
       </div>
     </div>
   </header>
-  <section id="tech">
+
+  <article id="tech">
     <div class="container-fluid">
 
 
-      <h2>Understand the Key Technologies Used in Web Design</h2>
+      <h2>Understand the Key Languages Used in Web Design</h2>
       <div class="row">
 
 
@@ -79,19 +81,37 @@
           <p>Behaviour</p>
         </div>
       </div>
-    </div>
-  </section>
 
-  <section id="principles">
-    <div class="">
-      <h2></h2>
+      <button onclick= "window.location.href='keytech.html';" type="button" class="btn btn-outline-warning">Discover more</button>
     </div>
-  </section>
+  </article>
 
+  <article id="web-tech">
+    <h2 class="web-heading">What goes behind the curtains to make your website work</h2>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="web col-lg-4">
+          <img class="http-icon"src="images/http-icon.jpg" alt="http-logo">
+          <h3>HTTP</h3>
+        </div>
+
+        <div class="web col-lg-4">
+          <img class="www-icon"src="images/www-logo.jpg" alt="www-logo">
+          <h3>World Wide Web</h3>
+        </div>
+
+        <div class="web col-lg-4">
+          <img class="hosting-icon"src="images/hosting-icon.jpg" alt="http-logo">
+          <h3>Web Hosting</h3>
+        </div>
+      </div>
+    </div>
+  </article>
+<article class="design">
+
+</article>
   <footer id="contact">
     <div class="container-fluid">
-
-
 
       <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
       <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
