--- a/keytech.html
+++ b/keytech.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
   <link rel="icon" href="favicon.ico">
-<meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design">
-<meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
+  <meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design, web technologies, design principles">
+  <meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
   <title>Bee Creative | Key Technologies</title>
 </head>
 
@@ -30,17 +30,58 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Key Technologies</a>
+              <a class="nav-link" href="keytech.html">Core Technologies</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="webtech.html">Application of Web Technologies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Design Principles</a>
+              <a class="nav-link" href="design.html">Design Principles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Use of Web Technologies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
+  </header>
+
+  <h2>Core Technologies</h2>
+  <h3>In order for us to create a website some Core Technologies are used a and we can devide them in:</h3>
+  <article id="languages">
+    <div class="">
+      <h2 class="lang">1.Languages:</h2>
+      <p class="lang-p">In order for you to access a webpage you will need a browser(chrome, safari, IE,etc) which a are a piece of software that looks up the IP number of the requested website and is able to receive data that it can render into the
+        websites that we see.</p>
+        <p class="lang-p"> The data we received from the server usually consist of 3 different files:</p>
+
+    </div>
+    <div class="html container-fluid">
+      <h2 class="lang">1.1.HTML:</h2>
+      <p class="lang-p">It stands for HyperText Markup Language. This technology is responsible for the structure of your website that is mainly used to add elements like text, images, buttons, links or anything involving the main structure of the
+        web page.
+        It is based on the Markup used to be put into manuscripts where editors would markup the manuscript to specify changes to the author or specify structure or layout to the publishers.
+      </p>
+      <img class="markup"src="images/markup.jpg" alt="markup-manuscripts">
+      <p class="lang-p">HTML works in the same way where you specify layout and structure of you website by using HTML tags.
+Below is an example of a HTML Tag
+</p>
+<img class ="ptag"src="images/ptag.png" alt="ptag-example">
+<p class="lang-p">The character in between the 2 brackets indicates the tag’s purpose, also known as element ( in this case a paragraph).
+Most tags have an opening and closing tag (which has a forward slash before the element) and in between them is the content.
+</p>
+    </div>
+  </article>
+
+  <footer id="contact">
+    <div class="container-fluid">
+
+      <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
+      <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
+      <a href="http://instagram.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
+      <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" target="_blank"></i></a>
+      <p class="copyright">© Copyright 2019 BeeCreative</p>
+    </div>
+  </footer>
+</body>
