--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 </head>
 
 <body>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
   <header class="heading">
     <div class="container-fluid">
 
@@ -45,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -53,6 +54,7 @@
           <img class="beelogo" src="http://pngimg.com/uploads/bee/bee_PNG74680.png" alt="bee-logo">
           <h1>Bee Creative</h1>
           <p class="sub-title">Making Web Design Easy</p>
+
         </div>
       </div>
     </div>
@@ -66,19 +68,19 @@
       <div class="row">
 
         <div class="tech-box col-lg-4">
-          <i class="icon fab fa-html5 fa-7x"></i>
+          <i class="icon fab fa-html5 fa-9x"></i>
           <h3>HTML</h3>
           <p>Structure</p>
         </div>
 
         <div class="tech-box col-lg-4">
-          <i class="icon fab fa-css3-alt fa-7x"></i>
+          <i class="icon fab fa-css3-alt fa-9x"></i>
           <h3>CSS</h3>
           <p>Style</p>
         </div>
 
         <div class="tech-box col-lg-4">
-          <i class="icon fab fa-js-square fa-7x"></i>
+          <i class="icon fab fa-js-square fa-9x"></i>
           <h3>JavaScript</h3>
           <p>Behaviour</p>
         </div>
