--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
-  <script src="scripts.js"></script>
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -15,7 +14,7 @@
   <link rel="icon" href="favicon.ico">
   <meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design, web technologies, design principles">
   <meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
-  <title>Bee Creative | Contact</title>
+  <title>Bee Creative | Core Technologies</title>
 </head>
 
 <body>
@@ -51,36 +50,6 @@
         </div>
       </nav>
   </header>
-  <div class="contact-form">
-
-
-    <div class="wrapper">
-      <h2>Contact Us</h2>
-      <div id="error_message"> </div>
-
-      <form id="mypost" onsubmit="return validation()">
-        <div class="input_field">
-          <input type="text" placeholder="Name" id="name">
-        </div>
-        <div class="input_field">
-          <input type="text" placeholder="Subject" id="subject">
-        </div>
-        <div class="input_field">
-          <input type="text" placeholder="Contact Number" id="phone">
-        </div>
-        <div class="input_field">
-          <input type="text" placeholder="Email" id="email">
-        </div>
-        <div class="input_field">
-          <textarea type="message" placeholder="Message"></textarea>
-        </div>
-        <div class="btn2">
-          <input type="submit">
-        </div>
-      </form>
-
-    </div>
-  </div>
   <footer id="contact">
     <div class="container-fluid">
 
@@ -91,4 +60,4 @@
       <p class="copyright">© Copyright 2019 BeeCreative</p>
     </div>
   </footer>
-</body>
+  </body>
