--- a/webtech.html
+++ b/webtech.html
@@ -8,16 +8,17 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu+Condensed&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/eda547a890.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="favicon.ico">
-<meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design, web technologies, design principles">
-<meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
-  <title>Bee Creative | Key Technologies</title>
-</head>
-
-<body>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="icon" href="favicon.ico">
+  <meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design, web technologies, design principles">
+  <meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
+  <title>Bee Creative | pplication of Web Technologies</title>
+</head>
+
+<body>
+
   <header class="heading">
     <div class="container-fluid">
 
@@ -42,19 +43,59 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
           </ul>
         </div>
       </nav>
-      </header>
+  </header>
 
-      <footer id="contact">
-        <div class="container-fluid">
 
-          <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
-          <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
-          <a href="http://instagram.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
-          <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" target="_blank"></i></a>
-          <p class="copyright">© Copyright 2019 BeeCreative</p>
-        </div>
-      </footer>
-      </body>
+
+  <h2 class="core">Application of Web Technologies</h2>
+  <h3 class="tech-sub">There is a lot of work happening behind the scenes to make your website work and it's important to understand how the internet works</h3>
+<article id="webtech">
+  <h2 class="lang">World Wide Web(WWW)</h2>
+  <img src="images/client-server.png" alt="clien-server-dynamic">
+  <p>The World Wide Web(usually referred to as just the Web) is a way of transmitting data over the internet using the HTTP protocol and html.
+The web can be summarised as a series of interactions between 2 types of systems: clients and servers.
+</p>
+<p>Clients are the devices the request and render the web content. Popular clients include browsers, mobile applications, screen readers and various content aggregators.
+We live in and increasingly connected world and the number of clients that can access web content is growing rapidly.  In fact trying to keep up with an the new clients and how they access and render you content is one of most changeling aspects of web design.
+</p>
+<p>Servers are applications that deliver web content or services to clients. There is a wide range or web servers and types that specialise in specific types of data or specific processing capabilities. They’re all involved in some way in delivering the content that you request or the services that you need performed</p>
+<h2 class="lang">HTTP</h2>
+<p>HyperText Transfer Protocol(HTTP) is the backbone of the internet and is an underlying  protocol used by the Web and it defines how messages are formatted and transmitted and what actions web servers  and browsers should take in response to various commands.</p>
+<p>It is a client-server protocol so communication between clients and servers is done by request and response cycles.
+Browser requests an HTML page. Server returns a HTML file
+Browser requests a style sheer. Server returns a CSS file.
+And so on…
+</p>
+<img src="images/client-server-chain.png" alt="client-server-chain">
+<p>Each individual request is sent to a server, which handles and provide an answer called the response. Between the client and the server there are numerous entities called proxies, that perform different operations.
+HTTP can also be used to fetch parts of documents to update Web Pages on demand</p>
+
+<h2 class="lang">HOSTING</h2>
+<p>Web hosting is a service that allows organizations and individuals to post a website onto the internet. A web host (or provider) is a business that provides technologies and services needs for the website or webpage to be viewed in the internet.
+Website are hosted in special computers called servers.
+</p>
+<p>When you host you website with a provider, some features are included such as email accounts, FTP access(where you can upload your website files onto the server from your local computer and WordPress support.There are several different wayS of hosting websites such as: </p>
+<ul class="list">
+  <li class="list-items">a.	Shared hosting: server space is shared with other websites. It is more affordable but you have the risk of the server getting overloaded which will make you website slow.</li>
+  <li class="list-items">b.	WordPress: if you use this website creation toll you might want to purchase a hosting package with them too to optimize your website</li>
+  <li class="list-items">c.	Dedicated hosting: Gives you complete/administrative control of the server with full root access.</li>
+  <li class="list-items">d.	VPS hosting: it’s a higher stronger more advances form of shared hosting but you are assigned resources that are not shared with other properties.</li>
+</ul>
+</article>
+  <footer id="contact">
+    <div class="container-fluid">
+
+      <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
+      <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
+      <a href="http://instagram.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
+      <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" target="_blank"></i></a>
+      <p class="copyright">© Copyright 2019 BeeCreative</p>
+    </div>
+  </footer>
+</body>
