More pages done and javascript
webtech, contact  pages done. 
javascript for the contact form also added

--- a/blog.html
+++ b/blog.html
@@ -50,6 +50,10 @@
         </div>
       </nav>
   </header>
+  <h2 class="core">Blog Article</h2>
+  <article class="">
+
+  </article>
   <footer id="contact">
     <div class="container-fluid">
 
