--- a/contact.html
+++ b/contact.html
@@ -51,14 +51,16 @@
         </div>
       </nav>
   </header>
-  <div class="contact-form">
 
+  <div id="contact-form">
+<h2>Feel free to get in touch with us</h2>
 
     <div class="wrapper">
-      <h2>Contact Us</h2>
-      <div id="error_message"> </div>
+      <h2>Contact us</h2>
+      <div id="error_message">
 
-      <form id="mypost" onsubmit="return validation()">
+      </div>
+      <form action="" id="myform" onsubmit="return validation();">
         <div class="input_field">
           <input type="text" placeholder="Name" id="name">
         </div>
@@ -72,7 +74,7 @@
           <input type="text" placeholder="Email" id="email">
         </div>
         <div class="input_field">
-          <textarea type="message" placeholder="Message"></textarea>
+          <textarea placeholder="Message" id="message"></textarea>
         </div>
         <div class="btn2">
           <input type="submit">
