--- a/design.html
+++ b/design.html
@@ -51,6 +51,39 @@
       </nav>
       </header>
 
+  <h2 class="core">Design Principles</h2>
+  <h3 class="tech-sub">When we talk about Web Design some Design principles are important to have in mind</h3>
+  <article id="design2">
+<h2 class="lang">Web Accessibility</h2>
+<p>Accessibility in web design is when the website and web tools are designed and coded so people with disabilities can use them. Making the se accessible benefits individuals, businesses and society.
+Not only web accessibility benefits people with disabilities but also people with temporary abilities like a broken arm o lost glasses
+The W3C Web Accessibility Initiative develops technical specifications and guidelines, techniques and supporting resources that describe accessibility solutions.
+Web Content Accessibility Guidelines (WCAG) is an example of one of those guidelines used to make the web more accessible.
+It covers items such as minimum contrast ratio, font sizes, html semantics, etc.
+</p>
+<h2 class="lang">Responsive Web Design</h2>
+<p>Responsive web design is the idea that design and development should respond to user’s behaviours and environment based on screen size, platform and orientation.
+Consists on mix of flexible grids and layouts, images an intelligent use of CSS media queries.
+When you switch from one device to the other, the design should adjust according to the screen size, although is not limited to only screen sizes. Responsive web design is about a whole new way of thinking about design.
+Things like the use of JavaScript to load different images resolutions for different platforms to make loading times shorter and saving data or having to think of how Apple’s image resizing features can affect your design are just a few examples on who we should be thinking when we’re designing.
+The use of media queries in CSS are also widely used to make web site respond with the change in screen size where anything from font sizes, colours and position can be changed.
+</p>
+<h2 class="lang"> Fonts, Colour and Images</h2>
+<p>When discussing web design we need to take into consideration the types of fonts and the choice of colours used.
+In general sans-serif fonts(fonts without decorative finished( such as Arial and Verdana are easier to read online. It should also be at least 16px and stick to a maximum of 2 point sizes to keep design streamlined.
+You should also keep you typography visually appealing and readable to visitors, along with the tricky use of keywords, meta-data and other SEO-sensitive elements.
+A well thought out colour pallet can go a long way to enhance the user experience.
+You should always think of complementary colours to create a balance and harmony.
+Using contrasting colours for the text and background will make reading easier. Avoid any dramatic colours unless you want to create emotion(e.g. for buttons).
+The right use of images can make your design a lot more fluid. Choosing images can help with brand positioning and connecting to your target audience.
+The use of infographics, videos and graphics are always encouraged to make communicating your content more effective.
+</p>
+<h2 class="lang"> Navigation and loading times</h2>
+<p>You should always aim to create a website that has a smooth navigation. It’s about how easy it is for people to take action and move around your website. Things likes the use of bread crumbs, designing clickable buttons and following the “three click rule” that means user should be able to find information they are looking for within 3 clicks.
+Loading times could also be an issues when thinking of your design. A few ways to improve the loading time would be optimising images sizes, combined code into a central CSS or JavaScript(this will reduce the HTTP requests) and minify HTML, CSS and JavaScript as the shorter are the lines of code the quicker it will be for them to load.
+</p>
+</article>
+<h4>Wanna know more about our services? Feel free to <a href="contact.html">Contact us</a></h4>
       <footer id="contact">
         <div class="container-fluid">
 
