--- a/keytech.html
+++ b/keytech.html
@@ -126,12 +126,16 @@ And when you use a framework, the framework is in charge of the flow. It provide
 Libraries is a collection of reusable code that can be used in our code when we need it. </p>
 <p>This simple diagram show how frameworks and libraries ara organised</p>
 </div>
+<p>Most languages have their own libraries but you can write you own custom library if you want.
+Example of libraries are Jquery, Bootstrap, Yahoo User Interface (YUI).
+Examples of frameworks are Angular, Ruby on rails, YII, Meteor JS
+</p>
           </div>
     </div>
 
 
   </article>
-
+<h4>Wanna know more about our services? Feel free to <a href="contact.html">Contact us</a></h4>
   <footer id="contact">
     <div class="container-fluid">
 
