--- a/webtech.html
+++ b/webtech.html
@@ -57,7 +57,7 @@
   <h3 class="tech-sub">There is a lot of work happening behind the scenes to make your website work and it's important to understand how the internet works</h3>
 <article id="webtech">
   <h2 class="lang">World Wide Web(WWW)</h2>
-  <img src="images/client-server.png" alt="clien-server-dynamic">
+  <img class="www" src="images/client-server.png" alt="clien-server-dynamic">
   <p>The World Wide Web(usually referred to as just the Web) is a way of transmitting data over the internet using the HTTP protocol and html.
 The web can be summarised as a series of interactions between 2 types of systems: clients and servers.
 </p>
@@ -72,7 +72,7 @@ Browser requests an HTML page. Server returns a HTML file
 Browser requests a style sheer. Server returns a CSS file.
 And so on…
 </p>
-<img src="images/client-server-chain.png" alt="client-server-chain">
+<img class="client" src="images/client-server-chain.png" alt="client-server-chain">
 <p>Each individual request is sent to a server, which handles and provide an answer called the response. Between the client and the server there are numerous entities called proxies, that perform different operations.
 HTTP can also be used to fetch parts of documents to update Web Pages on demand</p>
 
@@ -80,7 +80,8 @@ HTTP can also be used to fetch parts of documents to update Web Pages on demand<
 <p>Web hosting is a service that allows organizations and individuals to post a website onto the internet. A web host (or provider) is a business that provides technologies and services needs for the website or webpage to be viewed in the internet.
 Website are hosted in special computers called servers.
 </p>
-<p>When you host you website with a provider, some features are included such as email accounts, FTP access(where you can upload your website files onto the server from your local computer and WordPress support.There are several different wayS of hosting websites such as: </p>
+<img class="web-host" src="images/web-hosting.jpg" alt="web-hosting-diagram">
+<p>When you host you website with a provider, some features are included such as email accounts, FTP access(where you can upload your website files onto the server from your local computer) and WordPress support.There are several different ways of hosting websites such as: </p>
 <ul class="list">
   <li class="list-items">a.	Shared hosting: server space is shared with other websites. It is more affordable but you have the risk of the server getting overloaded which will make you website slow.</li>
   <li class="list-items">b.	WordPress: if you use this website creation toll you might want to purchase a hosting package with them too to optimize your website</li>
@@ -88,6 +89,7 @@ Website are hosted in special computers called servers.
   <li class="list-items">d.	VPS hosting: it’s a higher stronger more advances form of shared hosting but you are assigned resources that are not shared with other properties.</li>
 </ul>
 </article>
+<h4>Wanna know more about our services? Feel free to <a href="contact.html">Contact us</a></h4>
   <footer id="contact">
     <div class="container-fluid">
 
